<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/mc1"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
    >

    <ImageView
        android:layout_width="160dp"
        android:layout_height="86dp"
        android:contentDescription="@string/m_image_drawer"
        android:src="@drawable/m4" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/menu_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/menu_title_second"

        />
</LinearLayout>