<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/MimageView3"
                android:layout_width="349dp"
                android:layout_height="108dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/m15"
                android:contentDescription="@string/mtodoWHAT4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/MimageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/m16"
                    android:contentDescription="@string/mtodoWHAT3" />

                <TextView
                    android:id="@+id/MtextView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mNumberActivities"
                    android:textColor="#B20247"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/MtextView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mACTIVITY6"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/MimageView5"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/m17"
                    android:contentDescription="@string/mtodoWHAT2" />

                <TextView
                    android:id="@+id/MtextView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mNumberKCAL"
                    android:textColor="#B20247"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/MtextView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mkcal6"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/MView1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/MtextView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/mtoday6"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/MtextView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mcalendar"
                    android:textColor="#B20247"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/MtextView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/mmy_activities6"
                android:textColor="#B20247"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="261dp"
                android:id="@+id/MlistView1"/>


            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/m_shape1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/MimageView7"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/m18"
                    android:contentDescription="@string/mtodoWHAT" />

                <TextView
                    android:id="@+id/MtextView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/madd_new_activity"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>