<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarwaAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/MtextView7"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="152dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/add_activity3"
            android:textColor="#FF6666"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/MeditText5"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="153dp"
            android:layout_marginRight="153dp"
            android:layout_marginTop="39dp"
            android:ems="10"
            android:hint="@string/name3"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MtextView7" />

        <EditText
            android:id="@+id/MeditText7"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="153dp"
            android:layout_marginRight="153dp"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:hint="@string/duration3"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MeditText6" />

        <EditText
            android:id="@+id/MeditText8"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="153dp"
            android:layout_marginRight="153dp"
            android:layout_marginTop="51dp"
            android:ems="10"
            android:hint="@string/description3"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MeditText7" />

        <Button
            android:id="@+id/Mbutton2"
            android:layout_width="260dp"

            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginTop="56dp"
            android:background="@color/mc1"
            android:text="@string/confirm3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MeditText8" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>